1999-09-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* month-view.c (add_event): ditto
	(mark_current_day): ditto
	(month_view_set): ditto

	* goto.c (goto_dialog): ditto.

	* gnome-month-item.c (gnome_month_item_init): ditto.

	* gncal-day-panel.c (gncal_day_panel_new): ditto.

	* getdate.c (RelativeDate): ditto.

	* eventedit.c (set_all_day): ditto.
	(ee_rp_init_rule): ditto.

	* calendar.c (vcalendar_create_from_calendar): ditto.

	* calendar-conduit.c (update_record): ditto.

	* calobj.c (ical_object_generate_events): Get rid of pointers to
	values returned from localtime, as it uses a static buffer.
	
1999-09-14  Federico Mena Quintero  <federico@redhat.com>

	* gncal-full-day.c (child_popup_menu): Set the data pointers for
	all the items.

1999-09-13  Kjartan Maraas  <kmaraas@online.no>

	* doc/C/gnomecal.sgml: Updated and synced with the latest 
	version of gnome-users-guide. (1.0.6)
	
1999-08-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* calendar.c (calendar_object_changed): Modify the
	object->last_mod field.
	(calendar_add_object): Ditto.

	Closes bug #676

	* main.c (save_calendar_cmd): Fix problem in which we warned the
	user about the calendar being modified the first time the calendar
	was used. 

1999-04-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-month-item.c (gnome_month_item_set_arg): Fixed cut&paste
	bug for day fontsets.

1999-05-26  Russell Steinthal  <steintr@condor.penguinpowered.com>

	* gncal-todo.c main.c main.h prop.c: Added support for priorities
	for todo items.  Doesn't do much, but you can set them and sort by
	them.  (Use the properties box to enable them; should they be on
	by default?)

1999-05-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c (parse_an_arg): Added missing break here.  It was causing
	core dumps when invoked with --userfile.

	* gnome-cal.c (gnome_calendar_set_view): Add some assertions here,
	to pin point the bug reported on gnome-list.
