@@ -34,8 +34,12 @@ time_from_isodate (char *str)
 	t = mktime (&my_tm);
 
 	if (str [15] == 'Z')
-		t -= timezone;
-	    
+#if defined(HAVE_TM_GMTOFF)
+		t -= my_tm.tm_gmtoff
+#elsif defined(HAVE_TIMEZONE)
+		t -= timezone
+#endif
+		;
 	return t;
 }
 
